--- a/src/App.css
+++ b/src/App.css
@@ -39,8 +39,8 @@
 
 .read-the-docs {
   color: #888;
-} */
-/* .home-wrapper{
+} 
+.home-wrapper{
   margin: 0;
   font-family: "Arial", sans-serif;
   line-height: 1.6;
